chore: applied suggestions from kevins's review

--- a/docs/src/content/docs/es/reference/configuration.mdx
+++ b/docs/src/content/docs/es/reference/configuration.mdx
@@ -418,7 +418,7 @@ Cuando usas temas personalizados y estableces esto en `true`, debes proporcionar
 
 Define si el proveedor de búsqueda predeterminado de Starlight [Pagefind](https://pagefind.app/) está habilitado.
 
-Configurado en `false` para deshabilitar la indexación de tu sitio con Pagefind.
+Establece esta opción a `false` para excluir una página de los resultados de búsqueda.
 Esto también ocultará la interfaz de usuario de búsqueda predeterminada si está en uso.
 
 ### `head`
@@ -535,7 +535,7 @@ Consulta la [Referencia de Personalización de Componentes](/es/reference/overri
 **tipo:** [`StarlightPlugin[]`](/es/reference/plugins/#referencia-rápida-de-la-api)
 
 Extiende Starlight con plugins personalizados.
-Los plugins aplican cambios a tu proyecto para modificar o agregar a las características de Starlight.
+Los plugins aplican cambios a tu proyecto para modificar o agregar a las funcionalidades a Starlight.
 
 ```js
 starlight({
@@ -543,4 +543,4 @@ starlight({
 });
 ```
 
-Ver la [Referencia de Plugins](/es/reference/plugins/) para obtener detalles sobre cómo crear tus propios plugins.
+Vea la [Referencia de Plugins](/es/reference/plugins/) para obtener detalles sobre cómo crear tus propios plugins.
