--- a/docs/src/content/docs/ja/index.mdx
+++ b/docs/src/content/docs/ja/index.mdx
@@ -1,5 +1,8 @@
 ---
 title: Starlight 🌟 Astroでドキュメントサイトを作る
+head:
+  - tag: title
+    content: Starlight 🌟 Astroでドキュメントサイトを作る
 description: Starlightは、Astroを使った美しく高性能なドキュメントサイトの構築を支援します。
 template: splash
 hero:
