7c0b8cb334c501678f7ab87cce372cddfdde34ed

--- a/docs/src/content/docs/ja/reference/configuration.mdx
+++ b/docs/src/content/docs/ja/reference/configuration.mdx
@@ -399,6 +399,15 @@ Starlightは、デフォルトでSarah Drasnerの[Night Owlテーマ](https://gi
 カスタムテーマを使用し、かつこの値を`true`に設定する場合、適切な色のコントラストを確保するために、ダークテーマとライトテーマを少なくとも1つずつ提供する必要があります。
 :::
 
+### `pagefind`
+
+**type:** `boolean`  
+**default:** `true`
+
+Starlightのデフォルトのサイト検索プロバイダである[Pagefind](https://pagefind.app/)を有効にするかどうかを定義します。
+
+`false`に設定すると、Pagefindによるサイトのインデックス作成はおこなわれません。また、デフォルトの検索UIを使用している場合は、これも非表示になります。
+
 ### `head`
 
 **type:** [`HeadConfig[]`](#headconfig)
