--- a/docs/src/content/docs/ja/reference/configuration.mdx
+++ b/docs/src/content/docs/ja/reference/configuration.mdx
@@ -490,6 +490,15 @@ starlight({
 });
 ```
 
+### `titleDelimiter`
+
+**type:** `string`  
+**default:** `'|'`
+
+ブラウザのタブに表示される、ページの`<title>`タグ内のページタイトルとサイトタイトルの間の区切り文字を設定します。
+
+デフォルトでは、すべてのページの`<title>`は`ページタイトル | サイトタイトル`となります。たとえば、このページのタイトルは「設定方法」であり、このサイトのタイトルは「Starlight」なので、このページの`<title>`は「設定方法 | Starlight」となります。
+
 ### `plugins`
 
 **type:** [`StarlightPlugin[]`](/reference/plugins/#quick-api-reference)
