fd4aa635440b5c6ec945c49423f81f18331ac559

--- a/docs/src/content/docs/ja/reference/configuration.mdx
+++ b/docs/src/content/docs/ja/reference/configuration.mdx
@@ -154,19 +154,19 @@ sidebar: [
 
 ```js {5,9,14}
 sidebar: [
-  // フランス語に翻訳されたラベルをもつサイドバーの例。
+  // ブラジルポルトガル語に翻訳されたラベルをもつサイドバーの例。
   {
     label: 'ここから始める',
-    translations: { fr: 'Commencez ici' },
+    translations: { 'pt-BR': 'Comece Aqui' },
     items: [
       {
         label: '開始する',
-        translations: { fr: 'Bien démarrer' },
+        translations: { 'pt-BR': 'Introdução' },
         link: '/getting-started',
       },
       {
         label: 'プロジェクトの構造',
-        translations: { fr: 'Structure du projet' },
+        translations: { 'pt-BR': 'Estrutura de Projetos' },
         link: '/structure',
       },
     ],
