--- a/docs/src/content/docs/ja/index.mdx
+++ b/docs/src/content/docs/ja/index.mdx
@@ -1,7 +1,12 @@
 ---
 title: Starlight 🌟 Astroでドキュメントサイトを作る
+head:
+  - tag: title
+    content: Starlight 🌟 Astroでドキュメントサイトを作る
 description: Starlightは、Astroを使った美しく高性能なドキュメントサイトの構築を支援します。
 template: splash
+editUrl: false
+lastUpdated: false
 hero:
   title: Starlightでドキュメントを輝かせる
   tagline: 最高のドキュメントサイトを作るために必要なものがすべて揃っています。高速でアクセシブル、しかも使いやすさも備えます。
