Add x.com example

--- a/docs/src/content/docs/ja/reference/configuration.mdx
+++ b/docs/src/content/docs/ja/reference/configuration.mdx
@@ -320,6 +320,7 @@ starlight({
     threads: 'https://www.threads.net/@nmoodev',
     twitch: 'https://www.twitch.tv/bholmesdev',
     twitter: 'https://twitter.com/astrodotbuild',
+    'x.com': 'https://x.com/astrodotbuild',
     youtube: 'https://youtube.com/@astrodotbuild',
   },
 });
