--- a/docs/src/content/docs/ja/reference/configuration.mdx
+++ b/docs/src/content/docs/ja/reference/configuration.mdx
@@ -518,7 +518,7 @@ starlight({
 
 ### `plugins`
 
-**type:** [`StarlightPlugin[]`](/reference/plugins/#quick-api-reference)
+**type:** [`StarlightPlugin[]`](/ja/reference/plugins/#api早見表)
 
 Starlightをカスタムプラグインにより拡張します。プラグインは、Starlightの機能を変更または追加するために、プロジェクトに変更を適用します。
 
