fix: add hero.image

--- a/docs/src/content/docs/da/404.md
+++ b/docs/src/content/docs/da/404.md
@@ -5,6 +5,8 @@ editUrl: false
 hero:
   title: '404'
   tagline: <strong>Houston, vi har et problem.</strong> Vi kunne ikke finde den side.<br>Check URL'en eller prøv at bruge søgefeltet.
+  image: 
+    file: ../../../assets/hero-star.webp
   actions:
     - text: Gå til hjem
       icon: right-arrow
