--- a/docs/src/content/docs/da/index.mdx
+++ b/docs/src/content/docs/da/index.mdx
@@ -6,7 +6,7 @@ hero:
   title: Få din dokumentation til at skinne med Starlight
   tagline: Alt du har brug for, for at bygge en skindende dokumentationsside. Hurtig, tilgængelig og nem at bruge.
   image:
-    file: ../../assets/hero-star.webp
+    file: ../../../assets/hero-star.webp
   actions:
     - text: Kom igang
       icon: right-arrow
