--- a/docs/src/content/docs/da/index.mdx
+++ b/docs/src/content/docs/da/index.mdx
@@ -18,7 +18,7 @@ hero:
 ---
 
 import { CardGrid, Card } from '@astrojs/starlight/components';
-import AboutAstro from '../../components/about-astro.astro';
+import AboutAstro from '../../../components/about-astro.astro';
 
 <CardGrid stagger>
 	<Card title="Documentation, der begejstrer" icon="open-book">
