i18n(ko-KR): update link

--- a/docs/src/content/docs/ko/reference/configuration.mdx
+++ b/docs/src/content/docs/ko/reference/configuration.mdx
@@ -535,7 +535,7 @@ starlight({
 
 ### `plugins`
 
-**타입:** [`StarlightPlugin[]`](/ko/reference/plugins/#quick-api-reference)
+**타입:** [`StarlightPlugin[]`](/ko/reference/plugins/#빠른-api-참조)
 
 맞춤형 플러그인으로 Starlight를 확장하세요.
 플러그인은 프로젝트에 변경 사항을 적용하여 Starlight의 기능을 수정하거나 추가합니다.
