--- a/packages/starlight/translations/nl.json
+++ b/packages/starlight/translations/nl.json
@@ -21,6 +21,6 @@
   "404.text": "Pagina niet gevonden. Controleer de URL of probeer de zoekbalk.",
   "aside.note": "Opmerking",
   "aside.tip": "Tip",
-  "aside.caution": "Let op",
+  "aside.caution": "Opgepast",
   "aside.danger": "Gevaar"
 }
