i18n(ko-KR): update `site-search.mdx`

--- a/docs/src/content/docs/ko/guides/site-search.mdx
+++ b/docs/src/content/docs/ko/guides/site-search.mdx
@@ -91,7 +91,7 @@ title: 부분적으로 색인이 생성된 페이지
    export default defineConfig({
    	integrations: [
    		starlight({
-   			title: 'Site with DocSearch',
+   			title: 'DocSearch를 사용하는 사이트',
    			plugins: [
    				starlightDocSearch({
    					appId: 'YOUR_APP_ID',
