--- a/docs/src/content/docs/fr/reference/configuration.mdx
+++ b/docs/src/content/docs/fr/reference/configuration.mdx
@@ -94,7 +94,7 @@ Chaque élément doit comporter un `label` et l'une des propriétés suivantes :
 
 - `items` — un tableau contenant plus de liens et des sous-groupes.
 
-- `autogenerate` — un objet indiquant un répertoire de vos docs dpeuis lequel générer automatiquement un groupe de liens.
+- `autogenerate` — un objet indiquant un répertoire de vos docs depuis lequel générer automatiquement un groupe de liens.
 
 ```js
 starlight({
