--- a/docs/src/content/docs/fr/getting-started.mdx
+++ b/docs/src/content/docs/fr/getting-started.mdx
@@ -135,27 +135,28 @@ Comme Starlight est un logiciel en version bêta, il y aura des mises à jour et
 Assurez-vous de mettre à jour Starlight régulièrement !
 :::
 
-Starlight est une intégration Astro, et est mis à jour comme toute intégration `@astrojs/*` :
+Starlight est une intégration Astro.
+Vous pouvez la mettre à jour ainsi que tous les autres packages Astro en exécutant la commande suivante dans votre terminal :
 
 <Tabs>
 <TabItem label="npm">
 
 ```sh
-npm install @astrojs/starlight@latest
+npx @astrojs/upgrade
 ```
 
 </TabItem>
 <TabItem label="pnpm">
 
 ```sh
-pnpm upgrade @astrojs/starlight --latest
+pnpm dlx @astrojs/upgrade
 ```
 
 </TabItem>
 <TabItem label="Yarn">
 
 ```sh
-yarn upgrade @astrojs/starlight --latest
+yarn dlx @astrojs/upgrade
 ```
 
 </TabItem>
