--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -87,30 +87,27 @@ Una vez que hayas creado y personalizado tu sitio web de Starlight, puedes imple
 Debido a que Starlight es un software beta, habrá actualizaciones y mejoras frecuentes. ¡Asegúrate de actualizar Starlight regularmente!
 :::
 
-Starlight es una integración Astro y se actualiza de la misma manera que cualquier otra integración `@astrojs/*`:
+Starlight es una integración Astro. Puedes actualizarlo y otros paquetes de Astro ejecutando el siguiente comando en tu terminal:
 
 <Tabs>
 <TabItem label="npm">
 
 ```sh
-# actualizar Starlight con npm
-npm install @astrojs/starlight@latest
+npx @astrojs/upgrade
 ```
 
 </TabItem>
 <TabItem label="pnpm">
 
 ```sh
-# actualizar Starlight con pnpm
-pnpm upgrade @astrojs/starlight --latest
+pnpm dlx @astrojs/upgrade
 ```
 
 </TabItem>
 <TabItem label="Yarn">
 
 ```sh
-# actualizar Starlight con yarn
-yarn upgrade @astrojs/starlight --latest
+yarn dlx @astrojs/upgrade
 ```
 
 </TabItem>
