i18n(fr): update sentence

--- a/docs/src/content/docs/fr/getting-started.mdx
+++ b/docs/src/content/docs/fr/getting-started.mdx
@@ -136,7 +136,7 @@ Assurez-vous de mettre à jour Starlight régulièrement !
 :::
 
 Starlight est une intégration Astro.
-Vous pouvez la mettre à jour ainsi que tous les autres packages Astro en exécutant la commande suivante dans votre terminal :
+Vous pouvez la mettre à jour ainsi que tous autres packages Astro en exécutant la commande suivante dans votre terminal :
 
 <Tabs>
 <TabItem label="npm">
