docs: Translate configuration documentation

--- a/docs/src/content/docs/id/guides/site-search.mdx
+++ b/docs/src/content/docs/id/guides/site-search.mdx
@@ -56,7 +56,7 @@ Jika Anda memiliki akses ke [Algolia’s DocSearch program](https://docsearch.al
 
    			<TabItem label="npm">
 
-			   ```sh
+						   ```sh
    npm install @astrojs/starlight-docsearch
    ```
 
@@ -64,7 +64,7 @@ Jika Anda memiliki akses ke [Algolia’s DocSearch program](https://docsearch.al
 
    <TabItem label="pnpm">
 
-      ```sh
+         ```sh
    pnpm install @astrojs/starlight-docsearch
    ```
 
@@ -72,7 +72,7 @@ Jika Anda memiliki akses ke [Algolia’s DocSearch program](https://docsearch.al
 
    <TabItem label="Yarn">
 
-      ```sh
+         ```sh
    yarn add @astrojs/starlight-docsearch
    ```
 
@@ -91,12 +91,12 @@ Jika Anda memiliki akses ke [Algolia’s DocSearch program](https://docsearch.al
    export default defineConfig({
    	integrations: [
    		starlight({
-   			title: 'Site with DocSearch',
+   			title: 'Situs dengan DocSearch',
    			plugins: [
    				starlightDocSearch({
-   					appId: 'YOUR_APP_ID',
-   					apiKey: 'YOUR_SEARCH_API_KEY',
-   					indexName: 'YOUR_INDEX_NAME',
+   					appId: 'ID_APLIKASI_ANDA',
+   					apiKey: 'KUNCI_API_ANDA',
+   					indexName: 'NAMA_INDEX_ANDA',
    				}),
    			],
    		}),
