[i18nIgnore] docs: fix more documentation links

--- a/docs/src/content/docs/pt-br/manual-setup.mdx
+++ b/docs/src/content/docs/pt-br/manual-setup.mdx
@@ -5,7 +5,7 @@ description: Aprenda como instalar Starlight manualmente e o adicionar a um proj
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-A forma mais rápida de criar um novo site Starlight é utilizando `create astro` como é mostrado no [guia Introdução](/pt-br/getting-started/#criando-um-novo-projeto).
+A forma mais rápida de criar um novo site Starlight é utilizando `create astro` como é mostrado no [guia Introdução](/pt-br/getting-started/#crie-um-novo-projeto).
 Se você deseja adicionar Starlight a um projeto Astro existente, este guia irá te explicar como.
 
 ## Instale Starlight
