--- a/docs/src/content/docs/es/manual-setup.mdx
+++ b/docs/src/content/docs/es/manual-setup.mdx
@@ -5,7 +5,7 @@ description: Aprende como configurar Starlight manualmente para agregarlo a un p
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-La manera más rápida de crear un nuevo sitio Starlight es usando `create astro` como se muestra en la [Guía de Inicio Rápido](/es/getting-started/#creando-un-nuevo-proyecto).
+La manera más rápida de crear un nuevo sitio Starlight es usando `create astro` como se muestra en la [Guía de Inicio Rápido](/es/getting-started/#crea-un-nuevo-proyecto).
 Si quieres agregar Starlight a un proyecto de Astro existente, esta guía te explicará como hacerlo.
 
 ## Configuración de Starlight
