--- a/docs/src/content/docs/id/manual-setup.mdx
+++ b/docs/src/content/docs/id/manual-setup.mdx
@@ -5,7 +5,7 @@ description: Pelajari cara mengkonfigurasi Starlight secara manual untuk menamba
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-Cara tercepat untuk membuat website Starlight adalah dengan menjalankan perintah `create astro` sebagaimana dijelaskan di [panduan memulai](/id/getting-started/#creating-a-new-project).
+Cara tercepat untuk membuat website Starlight adalah dengan menjalankan perintah `create astro` sebagaimana dijelaskan di [panduan memulai](/id/getting-started/#membuat-proyek-baru).
 Jika Anda ingin menambahkan Starlight ke proyek Astro yang sudah ada, berikut ini adalah cara melakukannya.
 
 ## Memasang Starlight
