chore: update pr

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -52,7 +52,7 @@ When working locally, [Astro’s development server](https://docs.astro.build/en
 
 Inside your project directory, run the following command to start the development server:
 
-<Tabs>
+<Tabs syncKey="pkg">
 <TabItem label="npm">
 
 ```sh
