--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -84,7 +84,9 @@ Multiple sets of tabs on the same page can be synced so that switching tabs in o
 
 To synchronize tabs, add an identical `syncKey` property to each related `<Tabs>` component.
 
-```mdx
+```mdx 'syncKey="constellations"'
+# src/content/docs/example.mdx
+
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 _Some stars:_
