docs: add official plugins section

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -23,15 +23,17 @@ See all the [public project repos using Starlight on GitHub](https://github.com/
 Starlight [plugins](/reference/plugins/) can customize Starlight configuration, UI, and behavior, while also being easy to share and reuse.
 This section lists the official plugins supported by the Starlight team and also community plugins that are maintained by Starlight users.
 
-### Algolia DocSearch
+### Official plugins
 
-The official [Algolia DocSearch](https://docsearch.algolia.com/) plugin can be used to replace Pagefind, the default search provider, with Algolia DocSearch.
-
-To learn more about the Algolia DocSearch plugin, see the [plugin installation instructions](/guides/site-search/#algolia-docsearch).
+<CardGrid>
+	<LinkCard
+		href="/guides/site-search/#algolia-docsearch"
+		title="Algolia DocSearch"
+		description="Replace Pagefind, the default search provider, with Algolia DocSearch."
+	/>
+</CardGrid>
 
 ### Community plugins
-
-These community plugins can be used to customize your Starlight site.
 
 <CardGrid>
 	<LinkCard
