--- a/packages/starlight/translations/es.json
+++ b/packages/starlight/translations/es.json
@@ -22,5 +22,8 @@
   "aside.note": "Nota",
   "aside.tip": "Consejo",
   "aside.caution": "Precaución",
-  "aside.danger": "Peligro"
+  "aside.danger": "Peligro",
+  "expressiveCode.copyButtonCopied": "Copiado",
+  "expressiveCode.copyButtonTooltip": "Copiar al portapapeles",
+  "expressiveCode.terminalWindowFallbackTitle": "Ventana de terminal"
 }
