--- a/docs/src/content/docs/da/guides/project-structure.mdx
+++ b/docs/src/content/docs/da/guides/project-structure.mdx
@@ -12,7 +12,7 @@ Starlight projekter følger for det meste den samme fil- og mappestruktur som an
 - `astro.config.mjs` — Astro konfigurationsfilen; inkluderer Starlight integrationen og konfigurationen.
 - `src/content/config.ts` — Indholdskollektions-konfigurationsfilen; tilføjer Starlights frontmatter-skemaer til dit projekt.
 - `src/content/docs/` — Indholdsfiler. Starlight laver alle `.md`, `.mdx` eller `.mdoc` filer i denne mappe til en side på din hjemmeside.
-- `src/content/i18n/` (valgfri) — Oversættelses data til at støtte [internationaliseringen](/guides/i18n/).
+- `src/content/i18n/` (valgfri) — Oversættelses data til at støtte [internationaliseringen](/da/guides/i18n/).
 - `src/` — Andre koder og filer (komponenter, styling, billeder mm.) til dit projekt.
 - `public/` — Statiske filer (fonter, favicon, PDF'er mm.) som ikke vil blive ændret af Astro.
 
