--- a/docs/src/content/docs/da/index.mdx
+++ b/docs/src/content/docs/da/index.mdx
@@ -2,6 +2,8 @@
 title: Starlight 🌟 Byg dokumentationssider med Astro
 description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
 template: splash
+editUrl: false
+lastUpdated: false
 hero:
   title: Få din dokumentation til at skinne med Starlight
   tagline: Alt du har brug for, for at bygge en skindende dokumentationsside. Hurtig, tilgængelig og nem at bruge.
