fix translation in index.mdx

--- a/docs/src/content/docs/da/index.mdx
+++ b/docs/src/content/docs/da/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Starlight 🌟 Byg dokumentationssider med Astro
-description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
+description: Starlight hjælper dig med at bygge smukke og hurtige dokumentationssider med Astro.
 template: splash
 editUrl: false
 lastUpdated: false
