docs: apply wording suggestions
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -20,8 +20,8 @@ See all the [public project repos using Starlight on GitHub](https://github.com/
 
 ## Plugins
 
-Starlight [plugins](/reference/plugins/) can customize Starlight configuration, UI, and behavior, while also being easy to share and reuse.
-This section lists the official plugins supported by the Starlight team and also community plugins that are maintained by Starlight users.
+[Plugins](/reference/plugins/) can customize Starlight configuration, UI, and behavior, while also being easy to share and reuse.
+Extend your site with official plugins supported by the Starlight team and community plugins maintained by Starlight users.
 
 ### Official plugins
 
