i18n(fr): fix algolia docsearch plugin link

--- a/docs/src/content/docs/fr/showcase.mdx
+++ b/docs/src/content/docs/fr/showcase.mdx
@@ -27,7 +27,7 @@ Les [modules d'extension](/fr/reference/plugins/) peuvent personnaliser la confi
 
 <CardGrid>
 	<LinkCard
-		href="/guides/site-search/#algolia-docsearch"
+		href="/fr/guides/site-search/#algolia-docsearch"
 		title="Algolia DocSearch"
 		description="Remplacer Pagefind, le système de recherche par défaut, par Algolia DocSearch."
 	/>
