fix plugin cards

--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -29,7 +29,7 @@ Extiende tu sitio con plugins oficiales respaldados por el equipo de Starlight y
 	<LinkCard
 		href="/guides/site-search/#algolia-docsearch"
 		title="Algolia DocSearch"
-		description="Verifica en tus páginas de Starlight si hay enlaces rotos."
+		description="Reemplaza Pagefind, el proveedor de búsqueda predeterminado, con Algolia DocSearch."
 	/>
 </CardGrid>
 
@@ -39,7 +39,7 @@ Extiende tu sitio con plugins oficiales respaldados por el equipo de Starlight y
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-links-validator"
 		title="starlight-links-validator"
-		description="Check for broken links in your Starlight pages."
+		description="Verifica en tus páginas de Starlight si hay enlaces rotos."
 	/>
 </CardGrid>
 
