--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -29,7 +29,7 @@ Extiende tu sitio con plugins oficiales respaldados por el equipo de Starlight y
 	<LinkCard
 		href="/guides/site-search/#algolia-docsearch"
 		title="Algolia DocSearch"
-		description="Reemplaza Pagefind, el proveedor de búsqueda predeterminado, con Algolia DocSearch."
+		description="Reemplaza Pagefind, el proveedor de búsqueda predeterminado con Algolia DocSearch."
 	/>
 </CardGrid>
 
