fix: update url for homepage
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/hi/404.md
+++ b/docs/src/content/docs/hi/404.md
@@ -8,6 +8,6 @@ hero:
   actions:
     - text: अवतरण पेज पर वापस आये
       icon: right-arrow
-      link: /
+      link: /hi/
       variant: primary
 ---
