--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -4,7 +4,7 @@ description: ¡Descubre los sitios construidos con Starlight y herramientas comu
 ---
 
 :::tip[¡Agrega el tuyo!]
-¿Has construido un sitio de Starlight, plugin o una herramienta para Starlight?
+¿Has construido un sitio de Starlight, un plugin o una herramienta para Starlight?
 ¡Abre una PR agregando un enlace a esta página!
 :::
 
@@ -52,7 +52,7 @@ Extiende tu sitio con plugins oficiales respaldados por el equipo de Starlight y
 
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 
-Estas herramientas de la comunidad e integraciones pueden utilizarse para añadir características a tu sitio de Starlight.
+Estas herramientas de la comunidad e integraciones pueden utilizarse para añadir funcionalidades a tu sitio de Starlight.
 
 <CardGrid>
 	<LinkCard
