--- a/docs/src/content/docs/fr/showcase.mdx
+++ b/docs/src/content/docs/fr/showcase.mdx
@@ -44,7 +44,7 @@ Les [modules d'extension](/fr/reference/plugins/) peuvent personnaliser la confi
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-typedoc"
 		title="starlight-typedoc"
-		description="Générez des pages Starlight à partir de TypeScript en utilisant TypeDoc."
+		description="Générer des pages Starlight à partir de TypeScript en utilisant TypeDoc."
 	/>
 </CardGrid>
 
