style: refactor to match Mark's designs

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -46,11 +46,10 @@ import Testimonial from '../../components/testimonial.astro';
 	</Card>
 </CardGrid>
 
-<TestimonialGrid title="Testimonials">
+<TestimonialGrid>
   <Testimonial
     dir="ltr"
     lang="en"
-    date={new Date('10-20-23')}
     link={new URL('https://x.com/sylwiavargas')}
     avatar="https://pbs.twimg.com/profile_images/1382705200125853702/Ji3F2dl3_400x400.jpg"
     name="Sylwia"
@@ -59,7 +58,6 @@ import Testimonial from '../../components/testimonial.astro';
   />
   <Testimonial
     dir="ltr"
-    date={new Date('12-15-23')}
     link={new URL('https://x.com/sulco')}
     avatar="https://pbs.twimg.com/profile_images/1627613748818022401/SOy8wRn7_400x400.png"
     name="Tomek"
