--- a/docs/src/content/docs/guides/file-tree-demo.mdx
+++ b/docs/src/content/docs/guides/file-tree-demo.mdx
@@ -14,6 +14,15 @@ Remove this page
 
 <FileTree>
 
+- folder/
+- file
+- another_folder/
+  - astro.config.mjs this an **important** file
+
+</FileTree>
+
+<FileTree>
+
 - icons/
   - folder/
   - file
